2005-01-07  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-01-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/util/SimpleTimeZone.java:
	(getOffset): offset end date with daylight savings
	
2005-01-07  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-01-06  Tom Tromey  <tromey@redhat.com>

	* java/lang/ClassLoader.java (findClass): Fixed documentation.
	
2005-01-07  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-01-06  Michael Koch  <konqueror@gmx.de>

	* java/util/TimeZone.java
	(setID): Throw NullPointerException if needed.
	
2005-01-07  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-01-05  Ranjit Mathew  <rmathew@hotmail.com>

	* java/util/IdentityHashMap.java (put): Replace mistaken use
	of "<<" by "*".
	
2005-01-07  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-04  Tom Tromey  <tromey@redhat.com>

	* vm/reference/java/lang/VMThread.java (currentThread): Reordered
	modifiers.
	* vm/reference/java/security/VMAccessController.java
	(DEFAULT_CONTEXT): Reordered modifiers.

	* gnu/java/nio/SelectorImpl.java: Removed unused import.
	* gnu/java/security/der/DERWriter.java: Removed unused import.
	* gnu/java/net/protocol/http/Connection.java: Removed unused
	import.
	* gnu/java/nio/PipeImpl.java (read): Reordered modifiers.  Fixed
	indentation.
	(write): Likewise.
	* gnu/java/rmi/server/ConnectionRunnerPool.java
	(getConnectionRunner): Reordered modifiers.
	* gnu/java/text/FormatCharacterIterator.java (debug): Removed
	useless `final'.
	(dumpTable): Likewise.
	* gnu/java/net/PlainDatagramSocketImpl.java (bind): Reordered
	modifiers.
	(create, setOption, getOption, close, join, leave): Likewise.
	* gnu/java/net/PlainSocketImpl.java (create): Reordered
	modifiers.
	(bind, listen, accept): Likewise.
	
2005-01-07  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
