@@ -45,9 +45,7 @@ public ZipFile(String fname) throws IOException
 {
 	name = fname;
 	/* only have one thread at a time attempt to open the zip file */
-	synchronized(ZipFile.class) {
-	    zip = openZipFile0(fname);
-	}
+	zip = openZipFile0(fname);
 	if (zip == null) {
 		throw new IOException("No such zip file " + fname);
 	}
